--- a/Notes/12线程同步.md
+++ b/Notes/12线程同步.md
@@ -553,9 +553,60 @@ int main(int argc, char *argv[])
 
 ## 五.进程间互斥与同步
 
+### 1.互斥量mutex
+
+进程间也可以使用互斥锁，来达到同步的目的。但应在pthread_mutex_init初始化之前，修改其属性为进程间共享。mutex的属性修改函数主要有以下几个。
+
+pthread_mutexattr_t mattr 类型：       用于定义mutex锁的【属性】
+
+**pthread_mutexattr_init函数**：         初始化一个mutex属性对象
+
+​       int pthread_mutexattr_init(pthread_mutexattr_t *attr);
+
+**pthread_mutexattr_destroy函数**：      销毁mutex属性对象 (而非销毁锁)
+
+​       int pthread_mutexattr_destroy(pthread_mutexattr_t *attr);
+
+**pthread_mutexattr_setpshared函数**：   修改mutex属性。
+
+​       int pthread_mutexattr_setpshared(pthread_mutexattr_t *attr, int pshared);
+
+​       参2：pshared取值：
+
+​           **线程锁：PTHREAD_PROCESS_PRIVATE (mutex的默认属性即为线程锁，进程间私有)**
+
+​           **进程锁：PTHREAD_PROCESS_SHARED**
+
+### 2.文件锁
+
+借助 fcntl函数来实现锁机制。 操作文件的进程没有获得锁时，可以打开，但无法执行read、write操作。
+
+```c
+#include <unistd.h>
+#include <fcntl.h>
+
+int fcntl(int fd, int cmd, ... /* arg */ );
 
 
-## 六.哲学家用餐模型分析
+struct flock {
+    ...
+    short l_type;     锁的类型：F_RDLCK 、F_WRLCK 、F_UNLCK
+    short l_whence;    偏移位置：SEEK_SET、SEEK_CUR、SEEK_END 
+    off_t l_start;       起始偏移：1000
+    off_t l_len;        长度：0表示整个文件加锁
+    pid_t l_pid;       持有该锁的进程ID：(F_GETLK only)
+    ...
+};
+```
+
++ fcntl函数：  获取、设置文件访问控制属性。
++ **参数：**
+  + 参2：
+    + F_SETLK (struct flock *) 设置文件锁（trylock）
+    + F_SETLKW (struct flock *) 设置文件锁（lock）W --> wait
+    + F_GETLK (struct flock *) 获取文件锁
+
+
 
 
 
