--- a/Notes/15多进程和多线程并发服务器实现.md
+++ b/Notes/15多进程和多线程并发服务器实现.md
@@ -1,2 +1,37 @@
 
-  
+
+## 一.多进程并发服务器
+
+**使用多进程并发服务器时要考虑以下几点：**
+
+1. **父进程最大文件描述个数(父进程中需要close关闭accept返回的新文件描述符)**
+
+2. **系统内创建进程个数(与内存大小相关)**
+
+3. **进程创建过多是否降低整体服务性能(进程调度)**
+
+**处理过程：**
+
+1. 父进程主要用来监听客户端的连接请求，当有客户端请求连接时，accept()返回用于通信的文件描述符fd，父进程创建子进程。
+2. 子进程获得父进程数据空间、堆和栈的复制品，拿到文件描述符fd后，和客户端进行数据交互。
+3. 通信结束后，子进程exit()结束，父进程进程资源的回收。
+
+
+
+
+
+## 二.多线程并发服务器
+
+在使用线程模型开发服务器时需考虑以下问题：
+
+1. 调整进程内最大文件描述符上限
+
+2. 线程如有共享数据，考虑线程同步
+
+3. 服务于客户端线程退出时，退出处理。（退出值，分离态）
+
+4. 系统负载，随着链接客户端增加，导致其它线程不能及时得到CPU
+
+**处理过程：**
+
+线程的创建并不像进程那样(子进程获得父进程数据空间、堆和栈的复制品),线程可以与同进程的其他线程共享数据，但拥有自己的栈空间，拥有独立的执行序列。关键要点是将客户端信息类型和文件描述符和对应的线程处理id封装成结构体，实现多线程处理，其他处理步骤与多进程处理十分类似。
