--- a/Notes/实践与项目.md
+++ b/Notes/实践与项目.md
@@ -6,7 +6,7 @@
 
 :diamonds: 另外，即使是同一个端口，如果服务器要同时处理该端口上的TCP和UDP请求，则也需要创建两个不同的socket：一个是流socket，另一个是数据报socket，并将它们都绑定到该端口上。
 
-下面的回射服务器应用就能同时处理一个端口上的TCP和UDP请求。
+:diamond_shape_with_a_dot_inside: 下面的回射服务器应用就能同时处理一个端口上的TCP和UDP请求。
 
 :one: **创建TCP socket，并将其绑定到端口上 ​**
 
@@ -91,9 +91,13 @@ while( 1 ){
 }
 ```
 
-:arrow_forward:  **运行结果：**​
+:arrow_forward:   **运行结果：**​
 
 <div align = center><img src="../图片/UNIX72.png"  width = "800px" /></div>
 
-:arrow_right: [源码]()
+:arrow_right: [源码](https://github.com/ZYBO-o/Linux-Server-programming/tree/main/ProjectCodes/multi_port)
+
+
+
+## 二.I/O复用应用——非阻塞connect
 
