--- a/Notes/9 信号.md
+++ b/Notes/9 信号.md
@@ -141,10 +141,14 @@
     + pid = 0: 发送信号给 **与调用kill函数进程属于同一进程组的所有进程**。
     + pid < 0:  **取|pid|发给对应进程组。**
     + pid = -1：发送给进程有权限发送的系统中所有进程。
-
     + sig：不推荐直接使用数字，应使用宏名，因为不同操作系统信号编号可能不同，但名称一致。
-
+    
+  +  **失败errno返回值：**
+  
+    <div align  = center><img src="../图片/UNIX74.png" width="800px" /></div>
+  
   + 进程组：每个进程都属于一个进程组，进程组是一个或多个进程集合，他们相互关联，共同完成一个实体任务，每个进程组都有一个进程组长，默认进程组ID与进程组长ID相同。
+  
   + 权限保护：super用户(root)可以发送信号给任意用户，普通用户是不能向系统用户发送信号的。 kill -9 (root用户的pid) 是不可以的。同样，普通用户也不能向其他普通用户发送信号，终止其进程。 只能向自己创建的进程发送信号。普通用户基本规则是：发送者实际或有效用户ID == 接收者实际或有效用户ID
 
 ### 4.raise 和 abort 函数
@@ -371,6 +375,27 @@ int main(void)
 
 ## 四.信号捕捉
 
+### 0.信号处理方式
+
+```c
+#include <signal.h>
+
+typedef void (*sighandler_t)(int);
+```
+
+信号处理函数只带有一个整型参数，该参数用来指示信号类型。信号处理函数应该是可重入的，否则很容易引发一些竞态条件。所以在信号处理函数中严禁调用一些不安全的函数。
+
+除了用户自定义信号处理函数外，bits/signum.h头文件中还定义了信号的两种其他处理方式： SIG_IGN和SIG_DEL：
+
+```c
+#include＜bits/signum.h＞
+
+#define SIG_DFL((__sighandler_t)0)
+#define SIG_IGN((__sighandler_t)1)
+```
+
+SIG_IGN表示忽略目标信号，SIG_DFL表示使用信号的默认处理方式。信号的默认处理方式有如下几种：结束进程（Term）、忽略信号（Ign）、结束进程并生成核心转储文件（Core）、暂停进程（Stop），以及继续进程（Cont）。
+
 ### 1.信号捕捉函数signal
 
 ```c
@@ -445,16 +470,12 @@ int sigaction(int signo, const struct sigaction *restrict act,
   ```c
    struct sigaction {
           void     (*sa_handler)(int);
-          void     (*sa_sigaction)(int, siginfo_t *, void *);
           sigset_t   sa_mask; 
           int       sa_flags; 
           void     (*sa_restorer)(void);
+          void     (*sa_sigaction)(int, siginfo_t *, void *);
    };
   ```
-
-  + sa_restorer：该元素是过时的，不应该使用，POSIX.1标准将不指定该元素。(弃用)
-
-  + sa_sigaction：当sa_flags被指定为SA_SIGINFO标志时，使用该信号处理程序。(很少使用) 
 
   + **sa_handler：指定信号捕捉后的处理函数名(即注册函数)。也可赋值为SIG_IGN表忽略 或 SIG_DFL表执行默认动作**
 
@@ -463,6 +484,12 @@ int sigaction(int signo, const struct sigaction *restrict act,
     > 在函数执行期间屏蔽指定的信号
 
   + **sa_flags：通常设置为0，表使用默认属性，函数执行期间自动屏蔽本信号。**
+
+    <div align  = center><img src="../图片/UNIX75.png" width="600px" /></div>
+
+  + sa_restorer：该元素是过时的，不应该使用，POSIX.1标准将不指定该元素。(弃用)
+
+  + sa_sigaction：当sa_flags被指定为SA_SIGINFO标志时，使用该信号处理程序。(很少使用) 
 
 代码实现sigaction捕捉`ctl + c`
 
@@ -475,7 +502,7 @@ int sigaction(int signo, const struct sigaction *restrict act,
 /*自定义的信号捕捉函数*/
 void sig_int(int signo)
 {
-	printf("catch signal SIGINT\n");//单次打印
+		printf("catch signal SIGINT\n");//单次打印
     sleep(10);
     printf("----slept 10 s\n");
 }
@@ -921,3 +948,199 @@ struct sigaction {
      + 中断后返回-1， 设置errno为EINTR(表“被信号中断”)
 
 + 可修改sa_flags参数来设置被信号中断后系统调用是否重启。SA_INTERRURT不重启。 SA_RESTART重启。
+
+
+
+
+
+
+
+## 九.网络编程相关信号
+
+### 1. SIGHUP
+
+当挂起进程的控制终端时，SIGHUP信号将被触发。对于没有控制终端的网络后台程序而言，它们通常利用SIGHUP信号来强制服务器重读配置文件。一个典型的例子是xinetd超级服务程序。
+
+### 2.SIGPIPE
+
+默认情况下，往一个 **读端关闭的管道或socket连接** 中写数据将引发SIGPIPE信号。我们需要在代码中捕获并处理该信号，或者至少忽略它，因为程序接收到SIGPIPE信号的默认行为是结束进程，而我们绝对不希望因为错误的写操作而导致程序退出。引起SIGPIPE信号的写操作将设置errno为EPIPE。
+
+其中可以使用send函数的MSG_NOSIGNAL标志来禁止写操作触发SIGPIPE信号。在这种情况下，我们应该使用send函数反馈的errno值来判断管道或者socket连接的读端是否已经关闭。
+
+此外，我们也可以利用I/O复用系统调用来检测管道和socket连接的读端是否已经关闭。以poll为例，
+
++ 当管道的读端关闭时，写端文件描述符上的POLLHUP事件将被触发；
++ 当socket连接被对方关闭时，socket上的POLLRDHUP事件将被触发。
+
+### 3.SIGURG 
+
+在Linux环境下，内核通知应用程序带外数据到达主要有两种方法：
+
++ 一种是I/O复用技术，select等系统调用在接收到带外数据时将返回，并向应用程序报告socket上的异常事件
++ 另外一种方法就是使用SIGURG信号
+
+
+
+
+
+## 十.统一事件源
+
+### 1.概念介绍
+
+服务器编程中通常有三大类事件需要处理，一类是I/O事件，一类是信号事件，一类是时间事件。
+
+信号事件是一种异步事件，当信号来临时，主逻辑会被打断去执行信号处理函数。而信号到来的时机是不确定，如果此时信号处理函数会去访问一个已经被锁住的资源，那么这个线程就会被阻塞。所以信号处理函数应该是可重入的。
+
+一般信号处理时会将一些信号屏蔽，为了不屏蔽这些信号太久，同时也不至于主逻辑被冲散，一种解决方案是：
+
++ 信号处理函数只是简单的通知主循环（用于处理I/O事件）并告诉信号值，真正的信号处理逻辑被主循环调用，根据信号值做出相应的处理。信号处理函数和主循环之间通常 **用管道** 做通信。
++ **信号处理函数从管道的写端写入信号值，主循环从管道的读端读取信号值。**  因为主循环本身就要利用I/O复用函数监听链接进来的socket，所以将这个管道一并注册进I/O复用函数就能在主循环中及时得到信号到来的通知。
+
+### 2.代码分析
+
+:large_orange_diamond: **功能函数：信号处理函数**
+
+```c++
+
+void sig_handler( int sig )
+{
+    printf("catched!\n");
+    int save_errno = errno;
+    int msg = sig;
+    //将信号写入管道，以通知主循环
+    send( pipefd[1], ( char* )&msg, 1, 0 );
+    errno = save_errno;
+}
+```
+
+:small_blue_diamond: 保留原来的errno，在函数最后进行恢复， **以保证函数的可重入性**
+
+:small_blue_diamond: 将信号写入管道，以通知主循环
+
+:large_orange_diamond: **功能函数：添加信号处理**
+
+```c++
+//添加信号处理
+void addsig( int sig )
+{
+    struct sigaction sa;
+    memset( &sa, '\0', sizeof( sa ) );
+    sa.sa_handler = sig_handler;
+     //信号如果打断了慢速系统调用，中断处理完成之后继续恢复系统调用
+    sa.sa_flags |= SA_RESTART;
+    //在信号处理函数中屏蔽所有信号
+    sigfillset( &sa.sa_mask );
+    assert( sigaction( sig, &sa, NULL ) != -1 );
+}
+```
+
+:small_blue_diamond: 使用sigaction函数进行注册信号处理函数
+
+:diamond_shape_with_a_dot_inside: **主函数逻辑：**
+
+```c++
+epoll_event events[ MAX_EVENT_NUMBER ];
+int epollfd = epoll_create( 5 );
+assert( epollfd != -1 );
+//将listenfd注册到红黑树中
+addfd( epollfd, listenfd );
+
+//使用socketpair创建管道，注册pipefd[0]上的可读事件
+ret = socketpair( PF_UNIX, SOCK_STREAM, 0, pipefd );
+assert( ret != -1 );
+//设置写事件为非阻塞
+setnonblocking( pipefd[1] );
+//将读事件 注册至红黑树
+addfd( epollfd, pipefd[0] );
+
+// 添加信号
+addsig( SIGHUP );
+addsig( SIGCHLD );
+addsig( SIGTERM );
+addsig( SIGINT );
+bool stop_server = false;
+```
+
+:small_blue_diamond: 创建epoll事件，将listenfd进行注册
+
+:small_blue_diamond: 添加信号
+
+```c++
+while( !stop_server ){
+        int number = epoll_wait( epollfd, events, MAX_EVENT_NUMBER, -1 );
+        if ( ( number < 0 ) && ( errno != EINTR ) ){
+            printf( "epoll failure\n" );
+            break;
+        }
+	...
+```
+
+:small_blue_diamond: 服务器进入循环，工作
+
+:small_blue_diamond: 进行epoll_wait，等待事件发生
+
+```c++
+ for ( int i = 0; i < number; i++ ){
+     int sockfd = events[i].data.fd;
+     //链接事件
+     if( sockfd == listenfd ) {
+       ...
+         int connfd = accept( ...);
+       addfd( epollfd, connfd );
+     }
+```
+
+:small_blue_diamond: 如果是客户端进行连接事件，则将新的socket事件注册至红黑树中
+
+```c++
+else if( ( sockfd == pipefd[0] ) && ( events[i].events & EPOLLIN ) ){
+                int sig;
+                char signals[1024];
+                //接收管道中的数据
+                ret = recv( pipefd[0], signals, sizeof( signals ), 0 );
+                if( ret == -1 )
+                    continue;
+                else if( ret == 0 )
+                    continue;
+                else{
+                    for( int i = 0; i < ret; ++i ){
+                        //printf( "I caugh the signal %d\n", signals[i] );
+                        switch( signals[i] ){
+                            case SIGCHLD:
+                            case SIGHUP: {
+                                continue;
+                            }
+                            case SIGTERM:
+                            case SIGINT: {
+                                printf("catched SIGINT!\n");
+                                stop_server = true;
+                            }
+                        }
+                    }
+                }
+            }
+}
+```
+
+:small_blue_diamond: 如果是管道的读事件，则从管道中把数据读出
+
+:small_blue_diamond: 遍历数据中的信号，通过switch处理每个信号对应的事件
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
