--- a/Notes/定时器.md
+++ b/Notes/定时器.md
@@ -316,8 +316,7 @@ void add_timer( util_timer* timer, util_timer* lst_head )
         timer->prev = prev;
         timer->next = NULL;
         tail = timer;
-    }
-    
+    }   
 }
 ```
 
@@ -378,7 +377,7 @@ void addsig( int sig ){
 
 ```c++
 void timer_handler(){
-    //定时处理任务，实际上就是调用tick函数
+    //定时处理任务，实际上就是调用tick函数,当链表中无结点时，直接返回
     timer_lst.tick();
     //一个alarm调用只会引起一次SIGALRM信号，所以我们要重新定时，不断触发信号
     alarm( TIMESLOT );
@@ -635,9 +634,181 @@ while( 1 )
 
 ### 2.代码分析
 
+:large_blue_diamond: 用户数据类
 
+```c++
+struct client_data{
+    sockaddr_in address;				//客户端socket地址
+    int sockfd;									//socket文件描述符
+    char buf[ BUFFER_SIZE ];		//读缓存
+    util_timer* timer;					//定时器
+};
+```
 
+:large_blue_diamond: 定时器类
 
+```c++
+class tw_timer{
+public:
+    tw_timer( int rot, int ts ) 
+    : next( NULL ), prev( NULL ), rotation( rot ), time_slot( ts ){} 
+public:
+    int rotation;                 //记录定时器在时间轮转多少圈后生效
+    int time_slot;                //记录定时器属于时间轮上哪个槽（对应的链表，下同）
+    void (*cb_func)( client_data* );        //定时器回调函数
+    client_data* user_data;                 //客户数据
+    tw_timer* next;                         //指向下一个定时器
+    tw_timer* prev;                         //指向上一个定时器
+};
+```
+
+:diamond_shape_with_a_dot_inside: **时间轮类 time_wheel** 
+
+:one: 定时器链表的数据成员
+
+```c++
+private:
+    static const int N = 60;    //时间轮上槽的数目
+    static const int TI = 1;    //每 1s时间轮转动一次，即槽间隔为 1s
+    tw_timer* slots[N];         //时间轮的槽，其中每个元素指向一个定时器链表，链表无序
+    int cur_slot;               //时间轮的当前槽
+```
+
+:two: 构造函数与析构函数
+
+```c++
+//构造函数，当前槽为0
+time_wheel() : cur_slot( 0 ){  
+  	//初始化每个槽的头结点
+    for( int i = 0; i < N; ++i )
+        slots[i] = NULL;
+}
+
+//析构函数
+~time_wheel(){
+    //遍历每个槽，并销毁其中的定时器
+    for( int i = 0; i < N; ++i ){
+        tw_timer* tmp = slots[i];
+        while( tmp ){
+            slots[i] = tmp->next;
+            delete tmp;
+            tmp = slots[i];
+        }
+    }
+}
+```
+
++ 构造函数将当前槽设置为0
++ 析构函数删除所有的定时器
+
+:three: **将目标定时器timer添加到链表中**
+
+```c++
+//根据定时值timeout创建一个定时器，并把它插入合适的槽中
+tw_timer* add_timer( int timeout ){
+    if( timeout < 0 )
+        return NULL;
+    int ticks = 0;
+
+    /*
+        下面根据待插入定时器的超时值计算它将在时间轮转动多少个滴答后被触发，
+        并将该滴答数存储于变量ticks中。
+        如果待插入定时器的超时值小于时间轮的槽间隔SI，则将ticks向上折合为1，
+        否则就将ticks向下折合为timeout/SI
+    */
+    if( timeout < TI )
+        ticks = 1;
+    else
+        ticks = timeout / TI;
+    //计算待插入的定时器在时间轮转动多少圈后被触发
+    int rotation = ticks / N;
+    //计算待插入的定时器应该被插入哪个槽中
+    int ts = ( cur_slot + ( ticks % N ) ) % N;
+    //创建新的定时器，它在时间轮转动rotation圈之后被触发，且位于第ts个槽上
+    tw_timer* timer = new tw_timer( rotation, ts );
+    //如果第ts个槽中尚无任何定时器，则把新建的定时器插入其中，并将该定时器设置为该槽的头结点
+    if( !slots[ts] ){
+        printf( "add timer, rotation is %d, ts is %d, cur_slot is %d\n", rotation, ts, cur_slot );
+        slots[ts] = timer;
+    }
+    //否则，将定时器插入第ts个槽中
+    else{
+        timer->next = slots[ts];
+        slots[ts]->prev = timer;
+        slots[ts] = timer;
+    }
+    return timer;
+}
+```
+
+:four: **定时器删除函数**
+
+```c++
+//删除目标定时器timer
+void del_timer( tw_timer* timer )
+{
+    if( !timer )
+        return;
+    int ts = timer->time_slot;
+    //slots[ts]是目标定时器所在槽的头结点。如果目标定时器就是该头结点，则需要重置第ts个槽的头结点
+    if( timer == slots[ts] ){
+        slots[ts] = slots[ts]->next;
+        if( slots[ts] )
+            slots[ts]->prev = NULL;
+        delete timer;
+    }
+    //否则删除对应结点
+    else{
+        timer->prev->next = timer->next;
+        if( timer->next )
+            timer->next->prev = timer->prev;
+        delete timer;
+    }
+}
+```
+
+:five: **心搏函数**
+
+```c++
+//SI时间到后，调用该函数，时间轮向前滚动一个槽的间隔
+void tick(){
+    //取得时间轮上当前槽的头结点
+    tw_timer* tmp = slots[cur_slot];
+    printf( "current slot is %d\n", cur_slot );
+    while( tmp ){
+        printf( "tick the timer once\n" );
+        //如果定时器的rotation值大于0，则它在这一轮不起作用
+        if( tmp->rotation > 0 ){
+            tmp->rotation--;
+            tmp = tmp->next;
+        }
+        //否则，说明定时器已经到期，于是执行定时任务，然后删除该定时器
+        else{
+            //调用任务函数
+            tmp->cb_func( tmp->user_data );
+            //如果是头结点
+            if( tmp == slots[cur_slot] ){
+                printf( "delete header in cur_slot\n" );
+                slots[cur_slot] = tmp->next;
+                delete tmp;
+                if( slots[cur_slot] )
+                    slots[cur_slot]->prev = NULL;
+                tmp = slots[cur_slot];
+            }
+            else{
+                tmp->prev->next = tmp->next;
+                if( tmp->next )
+                    tmp->next->prev = tmp->prev;
+                tw_timer* tmp2 = tmp->next;
+                delete tmp;
+                tmp = tmp2;
+            }
+        }
+    }
+    //更新时间轮的当前槽，以反映时间轮的转动
+    cur_slot = ++cur_slot % N;
+}
+```
 
 ### 3.性能分析
 
@@ -673,11 +844,292 @@ while( 1 )
 
 ### 2.最小堆操作
 
-堆的操作见 [堆排序]()
+最小，最大堆的详细介绍见 [堆排序](https://github.com/ZYBO-o/LeetCode/tree/main/Sort#%E4%B8%83%E5%A0%86%E6%8E%92%E5%BA%8F) 。
+
+<div align = center><img src="../图片/79.png" width="300px" /></div>
+
+将一个元素X插入最小堆，我们可以在树的下一个空闲位置创建一个空穴。
+
++ 如果X可以放在空穴中而不破坏堆序，则插入完成。
++ 否则就执行上虑操作，即交换空穴和它的父节点上的元素。不断执行上述过程，直到X可以被放入空穴，则插入操作完成。
+
+比如，我们要往上图所示的最小堆中插入值为14的元素，则可以按照下图所示的步骤来操作。
+
+<div align = center><img src="../图片/UNIX79.png" width="800px" /></div>
+
++ 创建空穴　
++ 上虑一次　
++ 上虑二次
+
+最小堆的删除操作指的是删除其根节点上的元素，并且不破坏堆序性质。执行删除操作时，我们需要先在根节点处创建一个空穴。由于堆现在少了一个元素，因此我们可以把堆的最后一个元素X移动到该堆的某个地方。
+
++ 如果X可以被放入空穴，则删除操作完成。
+
++ 否则就执行下虑操作，即交换空穴和它的两个儿子节点中的较小者。不断进行上述过程，直到X可以被放入空穴，则删除操作完成。
+
+比如，我们要对图11-2所示的最小堆执行删除操作，则可以按照图11-4所示的步骤来执行。
+
+<div align = center><img src="../图片/UNIX80.png" width="800px" /></div>
+
++ 在根节点处创建空穴　
++ 下虑一次
++ 下虑二次
+
+由于最小堆是一种完全二叉树，所以我们可以用数组来组织其中的元素。比如，最上面所示的最小堆可以用下图的数组来表示。
+
+对于数组中的任意一个位置i上的元素，其左儿子节点在位置2i+1上，其右儿子节点在位置2i+2上，其父节点则在位置[（i-1）/2]（i＞0）上。与用链表来表示堆相比，用数组表示堆不仅节省空间，而且更容易实现堆的插入、删除等操作
+
+<div align = center><img src="../图片/UNIX81.png" width="800px" /></div>
 
 ### 3.代码分析
 
+:large_blue_diamond: 用户数据类
 
+```c++
+struct client_data{
+    sockaddr_in address;				//客户端socket地址
+    int sockfd;									//socket文件描述符
+    char buf[ BUFFER_SIZE ];		//读缓存
+    util_timer* timer;					//定时器
+};
+```
+
+:large_blue_diamond: 定时器类
+
+```c++
+class heap_timer{
+public:
+    heap_timer( int delay ){
+        expire = time( NULL ) + delay;
+    }
+public:
+   time_t expire;                       //定时器生效的绝对时间
+   void (*cb_func)( client_data* );     //定时器的回调函数
+   client_data* user_data;              //用户数据
+};
+```
+
+:diamond_shape_with_a_dot_inside: **时间堆类 time_heap** 
+
+:one: 时间堆类 的数据成员
+
+```c++
+private:
+    heap_timer** array; //堆数组
+    int capacity;       //堆数组的容量
+    int cur_size;       //堆数组当前包含元素的个数
+```
+
+:two: 构造函数与析构函数
+
+```c++
+//构造函数之一，初始化一个大小为cap的空堆
+time_heap( int cap ) throw ( std::exception ) 
+  : capacity( cap ), cur_size( 0 ) {
+    //创建堆数组
+    array = new heap_timer* [capacity];
+    if ( ! array )
+        throw std::exception();
+    //每个元素都指向空
+    for( int i = 0; i < capacity; ++i )
+        array[i] = nullptr;
+}
+
+//构造函数之二，用已有数组来初始化堆
+time_heap( heap_timer** init_array, int size, int capacity ) throw ( std::exception ) : cur_size( size ), capacity( capacity ){
+    if ( capacity < size ){
+        throw std::exception();
+    }
+    //创建堆数组
+    array = new heap_timer* [capacity];
+    if ( ! array )
+        throw std::exception();
+    //每个元素都指向空
+    for( int i = 0; i < capacity; ++i )
+        array[i] = nullptr;
+    
+    if ( size != 0 ){
+        //将传入的数组赋值给定义的堆数组
+        for ( int i =  0; i < size; ++i )
+            array[ i ] = init_array[ i ];
+        //对数组中的第[(cur_size-1)/2]～0个元素执行下虑操作;构建最小堆  
+        for ( int i = (cur_size-1)/2; i >=0; --i )
+            percolate_down( i );   
+    }
+}
+
+//析构函数：销毁时间堆
+~time_heap(){
+    for ( int i =  0; i < cur_size; ++i )
+        delete array[i];
+    delete[] array; 
+}
+```
+
++ 构建了两个构造函数
+  + 第一个是只传入堆的容量，然后构建堆数组，并将元素全部指向空
+  + 第二个是传入指向堆的指针，堆的大小，堆的容量；构建堆然后将传入的变量进行赋值。最后构建最小堆。
++ 析构函数删除所有的定时器
+
+:three: **将目标定时器timer添加到链表中**
+
+```c++
+//添加目标定时器timer
+void add_timer( heap_timer* timer ) throw ( std::exception )
+{
+    if( !timer )
+        return;
+    //如果当前堆数组容量不够，则将其扩大1倍
+    if( cur_size >= capacity )
+        resize(); 
+    //新插入了一个元素，当前堆大小加1，hole是新建空穴的位置
+    int hole = cur_size++;
+    int parent = 0;
+    //对从空穴到根节点的路径上的所有节点执行上虑操作
+    for( ; hole > 0; hole=parent ) {
+        parent = (hole-1)/2;
+        if ( array[parent]->expire <= timer->expire )
+            break;
+        array[hole] = array[parent];
+    }
+    //将新建的定时器插入到合适的位置
+    array[hole] = timer;
+}
+```
+
+:four: **删除定时器函数**
+
+```c++
+//删除目标定时器timer
+void del_timer( heap_timer* timer )
+{
+    if( !timer )
+        return;
+    //仅仅将目标定时器的回调函数设置为空，即所谓的延迟销毁。
+    //这将节省真正删除该定时器造成的开销，但这样做容易使堆数组膨胀
+    timer->cb_func = NULL;
+}
+```
+
+:five:  **获得堆顶部的定时器**
+
+```c++
+//获得堆顶部的定时器
+heap_timer* top() const
+{
+    if ( empty() )
+        return nullptr;
+
+    return array[0];
+}
+```
+
+:six: **删除堆顶部的定时器**
+
+```c++
+//删除堆顶部的定时器
+void pop_timer()
+{
+    if( empty() )
+        return;
+    if( array[0] ){
+        delete array[0];
+        //将原来的堆顶元素替换为堆数组中最后一个元素
+        array[0] = array[--cur_size];
+        //对新的堆顶元素执行下虑操作,重新构造最小堆
+        percolate_down( 0 );
+    }
+}
+```
+
+:seven: **心搏函数**
+
+```c++
+//心搏函数
+void tick(){
+    //取出堆顶函数
+    heap_timer* tmp = array[0];
+    //获取当前时间
+    time_t cur = time( NULL );
+    //循环处理堆中到期的定时器
+    while( !empty() ){
+        if( !tmp )
+            break;
+        //如果最小堆的根元素的时间大于当前事件，即还没到时间，则不用做事情
+        if( tmp->expire > cur )
+            break;
+        //如果到达时间，并且根结点的操作函数还在(此节点没有被删除)
+        if( array[0]->cb_func )
+            //执行堆顶定时器中的任务
+            array[0]->cb_func( array[0]->user_data );
+        //删除堆顶部的定时器
+        pop_timer();
+        //指向新的最小堆的根元素
+        tmp = array[0];
+    }
+}
+```
+
+:eight: **判断堆是否为空**
+
+```c++
+//判断堆是否为空
+bool empty() const { return cur_size == 0; }
+```
+
+:large_orange_diamond: **私有功能函数—最小堆的下虑操作**
+
+```c++
+//最小堆的下虑操作，它确保堆数组中以第hole个节点作为根的子树拥有最小堆性质
+void percolate_down( int hole ){
+    //指向当前元素
+    heap_timer* temp = array[hole];
+    int child = 0;
+    for ( ; ((hole*2+1) <= (cur_size-1));  ){
+        //理论上自己的左孩子的下标
+        child = hole*2+1;
+        //如果有自己的左孩子，并且还有右孩子，右孩子的值小于自己的左孩子
+        if ( (child < (cur_size-1)) && (array[child+1]->expire < array[child]->expire ) )
+            //那就指向自己的右孩子
+            ++child;
+        //如果指向的孩子比自己小，则进行交换
+        if ( array[child]->expire < temp->expire )
+            array[hole] = array[child];
+        else
+            break;
+        //下标进行更新
+        hole=child;
+    }
+    //最后的元素进行赋值
+    array[hole] = temp;
+}
+```
+
+:large_orange_diamond: **扩容函数**
+
+```c++
+//将堆数组容量扩大1倍
+void resize() throw ( std::exception )
+{
+    //创建两倍大小的数组元素，并都赋为空
+    heap_timer** temp = new heap_timer* [2*capacity];
+    for( int i = 0; i < 2*capacity; ++i )
+        temp[i] = NULL;
+    
+    if ( ! temp )
+        throw std::exception();
+    
+    //修改容量大小
+    capacity = 2*capacity;
+    //将原来的数组赋值到新数组
+    for ( int i = 0; i < cur_size; ++i )
+        temp[i] = array[i];
+    //删除原来的数组
+    delete [] array;
+    //指向新数组
+    array = temp;
+}
+```
 
 
 
